# alacritty-ligatures

./: Cargo.toml  INSTALL.md  README.md  alacritty.yml
alacritty/: Cargo.toml
alacritty/src/: cli.rs  display.rs  event.rs  main.rs  url.rs  window.rs
alacritty/src/config/: font.rs  mod.rs  monitor.rs  ui_config.rs
alacritty/src/renderer/: mod.rs  rects.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: index.rs  lib.rs  render.rs  text_run.rs
alacritty_terminal/src/config/: mod.rs
alacritty_terminal/src/term/: color.rs  mod.rs  search.rs
