[workspace]
members = [
    "alacritty",
    "alacritty_terminal",
    "alacritty_config_derive",
]

[profile.release]
lto = true
debug = 1
incremental = false

[patch.crates-io]
crossfont = { git = "https://github.com/zenixls2/crossfont", branch = "ligature", features = ["force_system_fontconfig"] }
